# katydid

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile.new  Dockerfile.simple  Katydid.rb  KatydidConfig.cmake.in  KatydidConfig.hh.in  KatydidConfig_cmake.h.in  KatydidTemplate_readeronly.json  KatydidTemplate_updated.json  LICENSE  Makefile  Makefile.am  Makefile_old  README  README.md  USED_VERSIONS  _candidates_link_def_8hh.html  _candidates_link_def_8hh_source.html  _channel_correlator_8cc.html  _channel_correlator_8cc_source.html  _config_check_8cc.html  _config_check_8cc_source.html  _egg_link_def_8hh.html  _egg_link_def_8hh_source.html  _egg_scanner_8cc.html  _egg_scanner_8cc_source.html  _extract_events_8cc.html  _extract_events_8cc_source.html  _extract_power_spectra_8cc.html  _extract_power_spectra_8cc_source.html  _f_f_t_link_def_8hh.html  _f_f_t_link_def_8hh_source.html  (+1475 more)
CI/: build.sh  (+1 more)
Documentation/: BasicConcepts.rst  BigIdea.rst  CMakeLists.txt  Configuration.rst  Contributing.rst  DevGuide.rst  DevTutorial.rst  Doxyfile  Doxyfile.in  Executables.rst  Installation.rst  Issues.rst  Modules.rst  OutputFormats.rst  Processors.rst  QuickStart.rst  README.rst  UserInterface.rst  conf.py  conf.py.in  index.html  index.rst  validation_log.md  validation_log.rst
Documentation/DoxPages/: mainpage.dox
Documentation/Manual/: JSONSyntax.txt
Documentation/ReferenceGuide/: CMakeLists.txt  Doxyfile  Doxyfile.in
KTCore/: CMakeLists.txt
KTCore/Application/: KTDataQueueProcessor.hh
KTCore/Data/: KTApplyCut.cc  KTCut.cc
KTCore/Templates/: KTProcessorTemplate.cc  KTProcessorTemplate.hh  MainCMakeLists.txt
KTCore/Utility/: KTCacheDirectory.hh  KTTime.hh
KTCore/cmake/: GetGitRevisionDescription.cmake  Katydid.cmake  KatydidCore.cmake  PackageBuilder.cmake
Source/Analysis/: CMakeLists.txt  KTAmplitudeCounter.cc  KTAmplitudeCounter.hh  KTAmplitudeDistribution.cc  KTAmplitudeDistribution.hh  KTAmplitudeDistributor.cc  KTAmplitudeDistributor.hh  KTAnalyticAssociator.cc  KTAnalyticAssociator.hh  KTBasicASCIITypeWriterTS.cc  KTBasicASCIITypeWriterTS.hh  KTBasicROOTTypeWriterAnalysis.cc  KTBasicROOTTypeWriterAnalysis.hh  KTBiasedACM.hh  KTBundleQueueProcessor.cc  KTCluster1DData.cc  KTCluster1DData.hh  KTConsensusThresholding.cc  KTConsensusThresholding.hh  KTCorrelationData.cc  KTCorrelationData.hh  KTCorrelationDataFFTW.cc  KTCorrelationDataFFTW.hh  KTCorrelator.cc  KTCorrelator.hh  KTCreateKDTree.cc  KTCreateKDTree.hh  KTDataAccumulator.cc  KTDataAccumulator.hh  KTDiscriminatedPoints1DData.cc  KTDiscriminatedPoints1DData.hh  KTDiscriminatedPoints2DData.cc  KTDiscriminatedPoints2DData.hh  KTDistanceClustering.cc  KTDistanceClustering.hh  KTFFTEHunt.cc  KTFFTEHunt.hh  KTFFTEHuntProcessor.cc  KTFFTEHuntProcessor.hh  KTGainNormalization.cc  (+41 more)
Source/Candidates/: CMakeLists.txt  KTCandidateCleaner.cc  KTCandidateCleaner.hh  KTCandidateTrackFinder.hh  KTDBScan.cc  KTDBScan.hh  KTDBScanEventClustering.cc  KTDBScanEventClustering.hh  KTDBScanTrackClustering.cc  KTDBScanTrackClustering.hh  KTDistanceMatrix.hh  KTFrequencyCandidate.cc  KTFrequencyCandidate.hh  KTFrequencyCandidateData.cc  KTFrequencyCandidateData.hh  KTFrequencyCandidateIdentifier.cc  KTFrequencyCandidateIdentifier.hh  KTJSONTypeWriterCandidates.cc  KTJSONTypeWriterCandidates.hh  KTMultiSliceClustering.cc  KTMultiSliceClustering.hh  KTROOTTreeTypeWriterCandidates.cc  KTROOTTreeTypeWriterCandidates.hh  KTSimpleClustering.cc  KTSimpleClustering.hh  KTTrackProcessing.cc  KTTrackProcessing.hh  KTWaterfallCandidateData.cc  KTWaterfallCandidateData.hh  TFrequencyCandidateData.cc  TFrequencyCandidateData.hh
Source/Core/: CMakeLists.txt  KTApplication.cc  KTApplication.hh  KTBundle.cc  KTBundle.hh  KTBundleQueueProcessor.cc  KTBundleQueueProcessor.hh  KTCacheDirectory.cc  KTCacheDirectory.hh  KTCommandLineHandler.cc  KTCommandLineHandler.hh  KTCommandLineOption.hh  KTConfigurable.cc  KTConfigurable.hh  KTConfigurator.cc  KTConfigurator.hh  KTData.cc  KTData.hh  KTDataMap.cc  KTDataMap.hh  KTDataQueueProcessor.cc  KTDataQueueProcessor.hh  KTDirectory.cc  KTDirectory.hh  KTEvent.cc  KTEvent.hh  KTEventLoop.hh  KTEventQueueProcessor.hh  KTFilenameParsers.cc  KTFilenameParsers.hh  KTPStoreNode.cc  KTPStoreNode.hh  KTParameterStore.cc  KTParameterStore.hh  KTPrimaryProcessor.cc  KTPrimaryProcessor.hh  KTProcessor.cc  KTProcessor.hh  KTProcessorToolbox.cc  KTProcessorToolbox.hh  (+20 more)
Source/Data/: CMakeLists.txt  KTAnalyticAssociateData.cc  KTCluster1DData.cc  KTCluster1DData.hh  KTCorrelationData.cc  KTCorrelationData.hh  KTCut.cc  KTCut.hh  KTCutStatus.cc  KTCutStatus.hh  KTData.cc  KTData.hh  KTDataLibPy.hh  KTDiscriminatedPoints1DData.cc  KTEggHeader.hh  KTFrequencySpectrumData.cc  KTFrequencySpectrumDataPolar.cc  KTFrequencySpectrumDataPolar.hh  KTFrequencySpectrumFFTW.cc  KTFrequencySpectrumFFTW.hh  KTFrequencySpectrumPolar.hh  KTGainVariationData.cc  KTGainVariationData.hh  KTNormalizedFSData.hh  KTPhysicalArrayFFTW.cc  KTPrintDataStructure.cc  KTPrintDataStructure.hh  KTTimeSeries.hh  KTTimeSeriesData.cc  KTTimeSeriesFFTW.cc  KTTimeSeriesFFTW.hh  KTTimeSeriesReal.cc  KTTimeSeriesReal.hh  KTWaterfallCandidateData.hh  KTWignerVilleData.hh
Source/Egg/: CMakeLists.txt  KTAbstractEvent.cc  KTAbstractEvent.hh  KTAdvancedEggProcessor.cc  KTAdvancedEggProcessor.hh  KTArrayUC.cc  KTBasicASCIITypeWriterTS.cc  KTBasicROOTTypeWriterEgg.cc  KTBasicROOTTypeWriterEgg.hh  KTComplexVector.cc  KTComplexVector.hh  KTDAC.cc  KTDAC.hh  KTData.hh  KTDecoratedEvent.cc  KTDecoratedEvent.hh  KTDigitizerTests.cc  KTDigitizerTests.hh  KTEgg.cc  KTEgg.hh  KTEggHeader.cc  KTEggHeader.hh  KTEggProcessor.cc  KTEggProcessor.hh  KTEggReader.cc  KTEggReader.hh  KTEggReader2011.cc  KTEggReader2011.hh  KTEggReaderMonarch.cc  KTEggReaderMonarch.hh  KTEggWriter.cc  KTEggWriter.hh  KTEvent.cc  KTEvent.hh  KTEventWindowFunction.cc  KTEventWindowFunction.hh  KTExtensibleEvent.cc  KTExtensibleEvent.hh  KTFFT.cc  KTFFT.hh  (+54 more)
Source/Evaluation/: CMakeLists.txt  KTCompareCandidates.cc  (+2 more)
(+9213 files in other folders)
